# org-policy

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: org-policy.yml
checker/: verify_org_policy.py
docs/: MULTI_DOCUMENT_ENTERPRISE_CODING_PRINCIPLES_GUIDE.md
