[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "org-policy"
version = "0.1.4"
description = "Pre-commit hook to enforce MULTI_DOCUMENT_ENTERPRISE_CODING_PRINCIPLES (P1..P18)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="zanganeh007"}]
license = {text = "MIT"}

[project.scripts]
org-policy-verify = "checker.verify_org_policy:main"

[tool.setuptools.packages.find]
where = ["."]
